commit trip and maritime circuit